--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Charlie Kirk Sucks -->
-  <title>Kirk Slider</title>
+  <!-- Hasanabi Rocks -->
+  <!-- Also thanks blovish, you legend -->
+  <title>Hasan Slider</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A slider to change the size of Charlie Kirk's face from 10% to 120%">
-  <meta name="keywords" content="Charlie Kirk,Charlie Kirk Face,TPUSA,Toilet Paper USA,I Live Like a Capitalist Every Single Day">
+  <meta name="description" content="A slider to change the size of Hasanabi's head from 10% to 140%">
+  <meta name="keywords" content="Hasanabi,Hasan Piker,What do i always say?">
   <script src="howler.min.js"></script>
   <style>
     html {
@@ -17,18 +18,30 @@
     }
     .background {
       background-image: url('background_crop.jpg');
-      width: 1141px;
-      height: 798px;
+      width: 1024px;
+      height: 819px;
       margin: auto;
       position: relative;
       max-width: 100%;
       overflow: hidden;
       background-position: center;
+      background-size: cover;
     }
     #face {
       position: absolute;
-      top: 167px;
-      left: 470px;
+      width: 255px;
+      height: 400px;
+      top: 91px;
+      left: 389px;
+      transform-origin: 50% 95%;
+    }
+    #from-to {
+      height: 32px;
+      position: absolute;
+      bottom: 24px;
+      left: 24px;
+      mix-blend-mode: difference;
+      filter: invert(1);
     }
     .controls {
       margin: 30px auto 20px auto;
@@ -54,11 +67,12 @@
   <div class="controls">
     <label for="sound">Sound</label>
     <input type="checkbox" id="sound" name="sound">
-    <input type="range" id="size" name="size" min="10" max="120" value="100">
+    <input type="range" id="size" name="size" min="10" max="140" value="100">
     <label id="percentage">100%</label>
   </div>
   <div class="background" id="bg">
     <img id="face" src="face.png" />
+      <img id="from-to" src="from-bdrink-to-elby.png"/>
   </div>
   <script>
 
@@ -71,9 +85,9 @@
     function adjustFacePosition() {
       var diff = 0;
       if (bg.clientWidth < 1200) {
-        diff = (1141 - bg.clientWidth) / 2;
+        diff = (1024 - bg.clientWidth) / 2;
       }
-      face.style.left = (470 - diff) + "px";
+      face.style.left = (389 - diff) + "px";
     }
     window.addEventListener("resize", adjustFacePosition);
     adjustFacePosition();
@@ -86,35 +100,17 @@
 
       if (!clip) {
         clip = new Howl({
-          src: ['kirk.mp3'],
+          src: ['hasan.mp3'],
           volume: 0.5
         });
       }
 
       clip.stop();
       if (sound.checked) {
-        cancelSpeech();
-        if (slider.value > 120) {
-          triggerSpeech();
-          return;
-        }
         clip.rate(1 / ((parseInt(slider.value) + 60) / 160));
         clip.play();
       }
     });
-
-    if (window.speechSynthesis)
-      var speechUtterance = new SpeechSynthesisUtterance("What the fuck did you just fucking say about me, you little bitch? I'll have you know I graduated top of my class in the Navy Seals, and I've been involved in numerous secret raids on Al-Quaeda, and I have over 300 confirmed kills. I am trained in gorilla warfare and I'm the top sniper in the entire US armed forces. You are nothing to me but just another target. I will wipe you the fuck out with precision the likes of which has never been seen before on this Earth, mark my fucking words. You think you can get away with saying that shit to me over the Internet? Think again, fucker. As we speak I am contacting my secret network of spies across the USA and your IP is being traced right now so you better prepare for the storm, maggot. The storm that wipes out the pathetic little thing you call your life. You're fucking dead, kid. I can be anywhere, anytime, and I can kill you in over seven hundred ways, and that's just with my bare hands. Not only am I extensively trained in unarmed combat, but I have access to the entire arsenal of the United States Marine Corps and I will use it to its full extent to wipe your miserable ass off the face of the continent, you little shit. If only you could have known what unholy retribution your little clever comment was about to bring down upon you, maybe you would have held your fucking tongue. But you couldn't, you didn't, and now you're paying the price, you goddamn idiot. I will shit fury all over you and you will drown in it. You're fucking dead, kiddo.");
-
-    function cancelSpeech() {
-      if (window.speechSynthesis)
-        window.speechSynthesis.cancel();
-    }
-
-    function triggerSpeech() {
-      if (window.speechSynthesis)
-        window.speechSynthesis.speak(speechUtterance);
-    }
 
   </script>
 </body>
