--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
   <div class="controls">
     <label for="sound">Sound</label>
-    <input type="checkbox" id="sound" name="sound">
+    <input type="checkbox" id="sound" name="sound" checked>
     <input type="range" id="size" name="size" min="10" max="140" value="100">
     <label id="percentage">100%</label>
   </div>
